--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,7 +1,7 @@
-name: despliegue-continuo-jenkins
+name: despliegue-continuo
 title: Despliegue continuo con Jenkins
 version: 1.0
-start_page: 
+
 nav:
 - modules/ROOT/nav.adoc
 - modules/prerrequisitos/nav.adoc
