--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,8 +1,7 @@
 name: despliegue-continuo
 title: Despliegue continuo con Jenkins
-version: master
-start_page: ROOT/index.adoc
-
+version: 0.1
+prerelease: -beta.1
 nav:
 - modules/ROOT/nav.adoc
 - modules/prerrequisitos/nav.adoc
